deploy/tekton/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: tekton-pipelines
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tekton-redirect
  namespace: tekton-pipelines
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.tekton.deagwon.com`)
      kind: Rule
      services:
        - name: tekton-dashboard
          port: 9097
      middlewares:
        - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tekton
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/issuer: tekton-pipelines-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.tekton.deagwon.com`)
      kind: Rule
      services:
        - name: tekton-dashboard
          port: 9097
  tls:
    secretName: tekton-pipelines-crt-secret
